@@ -12,7 +12,7 @@ pixmap_DATA = dia_gnome_icon.png dia-diagram.png
 
 CLEANFILES = core-translation-report
 
-core-translation-report: po/dia.pot po/*.po
+core-translation-report: po/dia.pot po/*.po po-checktrans.py po-checktrans
 	-./po-checktrans po/dia.pot po/*.po
 
 Applicationsdir = $(gnomedatadir)/gnome/apps/Applications
